// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionSheet showButton 1`] = `
<div>
  <div
    class="corn-drawer-mask corn-drawer-mask-show"
    data-testid="mask"
  />
  <div
    class="corn-drawer-body corn-drawer-bottom-show corn-drawer-bottom"
    data-testid="body"
  >
    <div
      class="corn-actionsheet"
    >
      <div
        class="corn-actionsheet-header"
      >
        <div
          class="corn-actionsheet-header-center corn-actionsheet-left"
        >
          <div
            class="title"
          >
            我是大标题
          </div>
          <div
            class="sub-title"
          >
            我是副标题
          </div>
        </div>
      </div>
      <div
        class="corn-actionsheet-body"
      />
      <div
        class="corn-actionsheet-floor"
      >
        <div
          class="corn-actionsheet-item"
        >
          <div
            class="corn-as-text corn-actionsheet-left"
          >
            关闭
          </div>
        </div>
        <div
          class="corn-actionsheet-item"
        >
          <div
            class="corn-as-text corn-actionsheet-left"
          >
            确定
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionSheet showHead: false 1`] = `
<div>
  <div
    class="corn-drawer-mask corn-drawer-mask-show"
    data-testid="mask"
  />
  <div
    class="corn-drawer-body corn-drawer-bottom-show corn-drawer-bottom"
    data-testid="body"
  >
    <div
      class="corn-actionsheet"
    >
      <div
        class="corn-actionsheet-body"
      />
    </div>
  </div>
</div>
`;

exports[`ActionSheet showHead: false and open close 1`] = `
<div>
  <div
    class="corn-drawer-mask corn-drawer-mask-show"
    data-testid="mask"
  />
  <div
    class="corn-drawer-body corn-drawer-bottom-show corn-drawer-bottom"
    data-testid="body"
  >
    <div
      class="corn-actionsheet"
    >
      <div
        class="corn-actionsheet-close"
        data-testid="close"
      />
      <div
        class="corn-actionsheet-body"
      />
    </div>
  </div>
</div>
`;

exports[`ActionSheet subTitle 1`] = `
<div>
  <div
    class="corn-drawer-mask corn-drawer-mask-show"
    data-testid="mask"
  />
  <div
    class="corn-drawer-body corn-drawer-bottom-show corn-drawer-bottom"
    data-testid="body"
  >
    <div
      class="corn-actionsheet"
    >
      <div
        class="corn-actionsheet-header"
      >
        <div
          class="corn-actionsheet-header-center corn-actionsheet-left"
        >
          <div
            class="title"
          >
            大标题居中
          </div>
          <div
            class="sub-title"
          >
            辅助文字居中
          </div>
        </div>
      </div>
      <div
        class="corn-actionsheet-body"
      />
    </div>
  </div>
</div>
`;

exports[`ActionSheet subTitle of hide 1`] = `<div />`;

exports[`ActionSheet title 1`] = `
<div>
  <div
    class="corn-drawer-mask corn-drawer-mask-show"
    data-testid="mask"
  />
  <div
    class="corn-drawer-body corn-drawer-bottom-show corn-drawer-bottom"
    data-testid="body"
  >
    <div
      class="corn-actionsheet"
    >
      <div
        class="corn-actionsheet-header"
      >
        <div
          class="corn-actionsheet-header-center corn-actionsheet-left"
        >
          <div
            class="title"
          >
            大标题居中
          </div>
        </div>
      </div>
      <div
        class="corn-actionsheet-body"
      />
    </div>
  </div>
</div>
`;

exports[`ActionSheet titleAlign: center 1`] = `
<div>
  <div
    class="corn-drawer-mask corn-drawer-mask-show"
    data-testid="mask"
  />
  <div
    class="corn-drawer-body corn-drawer-bottom-show corn-drawer-bottom"
    data-testid="body"
  >
    <div
      class="corn-actionsheet"
    >
      <div
        class="corn-actionsheet-header"
      >
        <div
          class="corn-actionsheet-header-center corn-actionsheet-center"
        >
          <div
            class="title"
          >
            大标题居中
          </div>
        </div>
      </div>
      <div
        class="corn-actionsheet-body"
      />
    </div>
  </div>
</div>
`;

exports[`ActionSheet titleAlign: left 1`] = `
<div>
  <div
    class="corn-drawer-mask corn-drawer-mask-show"
    data-testid="mask"
  />
  <div
    class="corn-drawer-body corn-drawer-bottom-show corn-drawer-bottom"
    data-testid="body"
  >
    <div
      class="corn-actionsheet"
    >
      <div
        class="corn-actionsheet-header"
      >
        <div
          class="corn-actionsheet-header-center corn-actionsheet-left"
        >
          <div
            class="title"
          >
            大标题居左
          </div>
        </div>
      </div>
      <div
        class="corn-actionsheet-body"
      />
    </div>
  </div>
</div>
`;

exports[`ActionSheet titleAlign: right 1`] = `
<div>
  <div
    class="corn-drawer-mask corn-drawer-mask-show"
    data-testid="mask"
  />
  <div
    class="corn-drawer-body corn-drawer-bottom-show corn-drawer-bottom"
    data-testid="body"
  >
    <div
      class="corn-actionsheet"
    >
      <div
        class="corn-actionsheet-header"
      >
        <div
          class="corn-actionsheet-header-center corn-actionsheet-right"
        >
          <div
            class="title"
          >
            大标题居右
          </div>
        </div>
      </div>
      <div
        class="corn-actionsheet-body"
      />
    </div>
  </div>
</div>
`;

exports[`ActionSheet 显示 1`] = `
<div>
  <div
    class="corn-drawer-mask corn-drawer-mask-show"
    data-testid="mask"
  />
  <div
    class="corn-drawer-body corn-drawer-bottom-show corn-drawer-bottom"
    data-testid="body"
  >
    <div
      class="corn-actionsheet"
    >
      <div
        class="corn-actionsheet-header"
      >
        <div
          class="corn-actionsheet-header-center corn-actionsheet-left"
        />
      </div>
      <div
        class="corn-actionsheet-body"
      />
    </div>
  </div>
</div>
`;

exports[`ActionSheet 自定义文字 1`] = `
<div>
  <div
    class="corn-drawer-mask corn-drawer-mask-show"
    data-testid="mask"
  />
  <div
    class="corn-drawer-body corn-drawer-bottom-show corn-drawer-bottom"
    data-testid="body"
  >
    <div
      class="corn-actionsheet"
    >
      <div
        class="corn-actionsheet-header"
      >
        <div
          class="corn-actionsheet-header-center corn-actionsheet-left"
        >
          <div
            class="title"
          >
            我是大标题
          </div>
          <div
            class="sub-title"
          >
            我是副标题
          </div>
        </div>
      </div>
      <div
        class="corn-actionsheet-body"
      />
      <div
        class="corn-actionsheet-floor"
      >
        <div
          class="corn-actionsheet-item"
        >
          <div
            class="corn-as-text corn-actionsheet-left"
          >
            cancel
          </div>
        </div>
        <div
          class="corn-actionsheet-item"
        >
          <div
            class="corn-as-text corn-actionsheet-left"
          >
            ok
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActionSheet 隐藏 1`] = `<div />`;
